--- a/vignettes/ColinearityInterruptors.Rmd
+++ b/vignettes/ColinearityInterruptors.Rmd
@@ -110,7 +110,7 @@ coa$Oki_Kum |>
 coa$Oki_Kum |>
   plyranges::filter(seqnames == "chr1", start > 8080000, end < 12900000) |>
   plyranges::filter(seqnames(query) == "contig_3_1")|>
-  plotApairOfChrs()
+  coalesce_contigs() |>  plotApairOfChrs()
 ```
 
 Colinearity appears to be interrupted by many inversions and translocations.
